--- a/api-endereco-instalacao/pom.xml
+++ b/api-endereco-instalacao/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.fiap</groupId>
-	<artifactId>tech-challenge</artifactId>
+	<artifactId>api-endereco-instalacao</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>tech-challenge</name>
 	<description>Tech Challenge Grupo 17</description>
