Criação da entidade Pessoa e suas classes Repository, Service e Controller.

--- a/api-usuarios/src/main/resources/application.properties
+++ b/api-usuarios/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=api-usuarios
 server.port=3002
 spring.web.locale=pt_BR
+
+#Database
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
