--- a/api-usuarios/src/main/resources/application.properties
+++ b/api-usuarios/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.web.locale=pt_BR
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
-
+spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
