--- a/api-endereco-instalacao/src/main/resources/application.properties
+++ b/api-endereco-instalacao/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=api-endereco-instalacao
 server.port=3001
 spring.web.locale=pt_BR
+
+#Database
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.defer-datasource-initialization=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
