--- a/api-tech-challenge/pom.xml
+++ b/api-tech-challenge/pom.xml
@@ -8,11 +8,11 @@
         <version>3.1.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>br.com.fiap.techchallenge.usuarios</groupId>
+    <groupId>br.com.fiap.techchallenge</groupId>
     <artifactId>api-tech-challenge</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>api-usuarios</name>
-    <description>api-usuarios</description>
+    <name>api-tech-challenge</name>
+    <description>api-tech-challenge</description>
     <properties>
         <java.version>17</java.version>
     </properties>
