--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>br.com.fiap.techchallenge</groupId>
-    <artifactId>api-tech-challenge</artifactId>
+    <artifactId>tech-challenge</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>api-tech-challenge</name>
-    <description>api-tech-challenge</description>
+    <name>tech-challenge</name>
+    <description>Fiap Tech Challenge</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -39,6 +39,11 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
