--- a/api-tech-challenge/src/main/docker/postgres.yml
+++ b/api-tech-challenge/src/main/docker/postgres.yml
@@ -2,11 +2,11 @@ version: '3.1'
 
 services:
   db:
-    image: postgres
-    container_name: postgres-tech-challenge
+    image: postgres:latest
+    container_name: tech-challenge-db
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: root
-      POSTGRES_PASSWORD: root
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: tech_challenge
