--- a/api-tech-challenge/src/main/resources/application-postgres.properties
+++ b/api-tech-challenge/src/main/resources/application-postgres.properties
@@ -1,5 +1,5 @@
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/tech-challenge
+spring.datasource.url=jdbc:postgresql://localhost:5432/tech_challenge
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
