Pequenos ajuste ConsumidorService.create | Adicionando SET<Eletrodoesticos> no Consumidor

--- a/api-tech-challenge/src/main/resources/application.properties
+++ b/api-tech-challenge/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=tech-challenge
 server.port=3000
 spring.web.locale=pt_BR
 
-spring.profiles.active=postgres
+spring.profiles.active=h2
