--- a/api-tech-challenge/pom.xml
+++ b/api-tech-challenge/pom.xml
@@ -11,7 +11,7 @@
     <groupId>br.com.fiap.techchallenge</groupId>
     <artifactId>api-tech-challenge</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>tech-challenge</name>
+    <name>api-tech-challenge</name>
     <description>Fiap Tech Challenge</description>
     <properties>
         <java.version>17</java.version>
