fix: whitespaces e nome do projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=tech-challenge
+spring.application.name=techChallengeParkimetro
 server.port=4000
 spring.web.locale=pt_BR
 
