--- a/src/main/resources/application-h2.properties
+++ b/src/main/resources/application-h2.properties
@@ -1,5 +1,5 @@
 #Database
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:tech_challenge
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.defer-datasource-initialization=true
