--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,13 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.0'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.1.4'
-	compileOnly 'org.projectlombok:lombok:1.18.26'
-	runtimeOnly 'com.h2database:h2:2.1.214'
-	annotationProcessor 'org.projectlombok:lombok:1.18.26'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'com.h2database:h2'
+	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
