--- a/fase-01/api-eletrodomesticos/pom.xml
+++ b/fase-01/api-eletrodomesticos/pom.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.1.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>br.com.fiap.techchallenge.usuarios</groupId>
-    <artifactId>api-usuarios</artifactId>
+
+    <groupId>br.com.fiap.techchallenge.fase-01</groupId>
+    <artifactId>api-eletrodomesticos</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>api-usuarios</name>
-    <description>api-usuarios</description>
+    <name>api-eletrodomesticos</name>
+    <description>api-eletrodomesticos</description>
+
     <properties>
         <java.version>17</java.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
