--- a/fase-02/api-tech-challenge/pom.xml
+++ b/fase-02/api-tech-challenge/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>api-tech-challenge</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>api-tech-challenge</name>
-    <description>api-usuarios</description>
+    <description>api-tech-challenge</description>
 
     <properties>
         <java.version>17</java.version>
