--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.com.fiap.techchallenge</groupId>
-    <artifactId>branch-main</artifactId>
+    <artifactId>tech-challenge-root</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Tech Challenge</name>
-    <description>Tech Challenge - Principal</description>
+    <description>Tech Challenge Root</description>
 
     <properties>
         <java.version>17</java.version>
