--- a/fase-04/build.gradle
+++ b/fase-04/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
