--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+### IntelliJ ###
+.idea/*
+
+### VSCode ###
+.vscode/*
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows
 
