--- a/fase-05/ms-carrinho/build.gradle
+++ b/fase-05/ms-carrinho/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-function-web', version: '4.1.0'
+    implementation group: 'org.springgramework.cloud', name: 'spring-cloud-starter-openfeign', version: '4,.1.0'
+
+
 }
 
 tasks.named('test') {
