--- a/fase-05/ms-produtos/build.gradle
+++ b/fase-05/ms-produtos/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-function-web', version: '4.1.0'
+    implementation group: 'org.springgramework.cloud', name: 'spring-cloud-starter-openfeign', version: '4,.1.0'
 }
 
 tasks.named('test') {
