--- a/fase-05/ms-carrinho/build.gradle
+++ b/fase-05/ms-carrinho/build.gradle
@@ -17,6 +17,8 @@ configurations {
     }
 }
 
+def serverPort = 8080
+
 repositories {
     mavenCentral()
 }
@@ -30,8 +32,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-function-web', version: '4.1.0'
-    implementation group: 'org.springgramework.cloud', name: 'spring-cloud-starter-openfeign', version: '4,.1.0'
-
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.1.0'
 
 }
 
