--- a/fase-05/ms-produtos/src/main/resources/application.properties
+++ b/fase-05/ms-produtos/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+oauth.jwt.secret=90bfb8e6-a6e8-4edd-b4ae-3cceb6676a8b
