--- a/fase-05/ms-oauth/build.gradle
+++ b/fase-05/ms-oauth/build.gradle
@@ -27,9 +27,11 @@ ext {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.security:spring-security-core:6.2.2'
     implementation 'org.springframework.data:spring-data-commons:3.2.3'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'com.auth0:java-jwt:4.4.0'
 
     compileOnly 'org.projectlombok:lombok'
