add: Swagger Docs

--- a/fase-05/ms-carrinho/src/main/resources/application.properties
+++ b/fase-05/ms-carrinho/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.application.name=MagazineFiap-Carrinho
 server.port=3003
 spring.web.locale=pt_BR
+
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=ms-carrinho
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=mongodb
 spring.data.mongodb.password=mongodb
+
 oauth.jwt.secret=90bfb8e6-a6e8-4edd-b4ae-3cceb6676a8b
+
+springdoc.swagger-ui.path=/swagger
