--- a/fase-05/ms-oauth/src/main/resources/application.properties
+++ b/fase-05/ms-oauth/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=MagazineFiap-OAuth
 server.port=3333
 spring.web.locale=pt_BR
+
 oauth.jwt.secret=90bfb8e6-a6e8-4edd-b4ae-3cceb6676a8b
+
+springdoc.swagger-ui.path=/swagger
