--- a/fase-05/ms-usuarios/src/main/resources/application.properties
+++ b/fase-05/ms-usuarios/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=MagazineFiap-Usuarios
 server.port=3001
 spring.web.locale=pt_BR
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/ms-usuarios
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+
 oauth.jwt.secret=90bfb8e6-a6e8-4edd-b4ae-3cceb6676a8b
+
+springdoc.swagger-ui.path=/swagger
