[Gateway] fix: correção de rotas

--- a/fase-05/ms-gateway/src/main/resources/application.properties
+++ b/fase-05/ms-gateway/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=MagazineFiap-Gateway
 spring.web.locale=pt_BR
 server.port=3000
 gateway.url.ms-usuarios=http://localhost:3001
-gateway.url.ms-produto=http://localhost:3002
+gateway.url.ms-produtos=http://localhost:3002
 gateway.url.ms-carrinho=http://localhost:3003
 gateway.url.ms-oauth=http://localhost:3333
